k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ofgs
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ofgs
    template:
        metadata:
            labels:
                app: ofgs
        spec:
            containers:
                - name: ofgs
                  image: dta32/ofgs:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 3000
