k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: ofgs-service
spec:
    selector:
        app: ofgs
    type: ClusterIP
    ports:
        - name: http
          port: 80
          targetPort: 3000
          protocol: TCP
