k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ofgs-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        - host: dfgs.dta32.my.id
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: ofgs-service
                            port:
                                number: 80
